2010-04-23  Marek Safar <marek.safar@gmail.com>

	* Complex.cs: Add explicit BigInteger operator.

2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Simply Parse/TryParse.

2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Add decimal operators/ctor.

2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Float/double coersion operators.

2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Remaining ToString overloads.

2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: double and float coersion ops.
	ToString() and ToString(string).

2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: .ctor(double) and .ctor(float).

2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Log.

2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: GreatestCommonDivisor.

2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: ModPow.

2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: / % Pow.

2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: DivRem.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Simplify Mul.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Mul.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: coersion operators for short, ushort,
	byte and sbyte.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: <<, >>.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: | & ^ ~.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: ++ --, unary +.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Abs.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Min, Max.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Negate.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Sub.
