@@ -1,3 +1,8 @@
+2010-07-08  Jb Evain  <jbevain@novell.com>
+
+	* Complex.cs: Fix Phase. Implement Acos, Asin, Atan, Exp,
+	Log, Log10, Pow and Sqrt.
+
 2010-04-23  Marek Safar <marek.safar@gmail.com>
 
 	* Complex.cs: Add explicit BigInteger operator.
